--- a/styles/style.css
+++ b/styles/style.css
@@ -20,11 +20,34 @@ body {
 }
 
 body, button {
-    color: #00FF00; /* Green text */
+    color: #00e000; /* Green text */
     font-family: 'PerfectDOSVGA437', monospace;
-    text-shadow: 0.1em 0.05em 0.1em #009100, -0.05em -0.05em 0.1em #1fb900;
+    text-shadow: 0.1em 0.05em 0.25em #007000, -0.05em -0.05em 0.25em #1fb900;
     font-size: 1.0em;
     font-weight: 0;
+    animation-name: text-color;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+}
+
+button {
+    font-size: 1.5em;
+    background-color: #000;
+    border: 2px solid break;
+}
+
+button:hover {
+    background-color: green;
+    border: 2px solid break;
+}
+    
+@keyframes text-color {
+    to {
+        color: #00c900;
+        text-shadow: 0.1em 0.05em 0.25em #004600, -0.05em -0.05em 0.25em #0f5c00;
+    }
 }
 
 h1, h2 {
@@ -38,17 +61,6 @@ p {
 #main_content {
     position: relative;
     z-index: 1;  /* keep on top */
-}
-
-button {
-    font-size: 1.5em;
-    background-color: #000;
-    border: 2px solid break;
-}
-
-button:hover {
-    background-color: green;
-    border: 2px solid break;
 }
 
 @font-face {
